# Jarvis

./: .gitignore  README.md  pyproject.toml  requirements.txt
benchmarks/results/: kv_cache.csv  measurements.csv
config/: config.yaml
docs/: DEMO.docx  DEMO.md  REPORT.docx  REPORT.md
outputs/: analysis.md  eval_results.csv  eval_results.json  mcp_demo_results.json  rag_comparison.json
scripts/: demo.sh  generate_sample_data.py  install.sh
src/jarvis/: __init__.py  __main__.py  cli.py
src/jarvis/benchmarks/: __init__.py  kv_cache.py  plots.py  prompts.py  quantization.py
src/jarvis/core/: __init__.py  config.py  logging_utils.py  metrics.py  ollama_client.py
src/jarvis/eval/: __init__.py  analysis.py  runner.py
src/jarvis/mcp/: __init__.py  agent.py  search_server.py
src/jarvis/rag/: __init__.py  chunking.py  corpus.py  pipeline.py  vectorstore.py
src/local_jarvis.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_core.py
