[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-jarvis"
version = "1.0.0"
description = "A fully local, CPU-friendly 'Jarvis' AI assistant: quantization benchmarking, KV-cache study, RAG, MCP web search, and evaluation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Applied ML Student" }]

[project.scripts]
jarvis = "jarvis.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
